force-app/main/default/objects/Redraw_Request__c/Redraw_Request__c.object-meta.xml
<CustomObject>
    <label>Redraw Request</label>
    <nameField>
        <displayFormat>RDR-{000000}</displayFormat>
        <label>Redraw Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redraw Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>