force-app/main/default/objects/Redraw_Request__c/fields/CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract__c</fullName>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Redraw Requests</relationshipLabel>
    <relationshipName>Redraw_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>