force-app/main/default/objects/Redraw_Request__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RJohnston 15/9/21
Field to indicate if the redraw has been processed or not</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>