force-app/main/default/objects/Redraw_Request__c/fields/Redraw_request_date__c.field-meta.xml
<CustomField>
    <fullName>Redraw_request_date__c</fullName>
    <description>RJohnston 15/9/21
Field to record the date the redraw request needs to be processed</description>
    <label>Redraw request date</label>
    <type>Date</type>
</CustomField>